Completed level 1 game development

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 
         <!-- Production mode (minified and packed) -->
         <!--<script type="text/javascript" src="/playcraftjs/dist/playcraft-0.5.11.min.js"></script>-->
-        <script type="text/javascript" src="/playcraftjs/lib/playcraft.js"></script>
+        <script type="text/javascript" src="/playcraftjs/dist/playcraft-0.5.4.min.js"></script>
 
         <script>
-            pc.start('pcGameCanvas', 'TheGame', 'js/', ['sokoban.js']);
+            pc.start('pcGameCanvas', 'TheGame', 'js/', ['sokoban.min.js']);
         </script>
 
     </head>
